<resources>
    <string name="app_name">Job Application</string>
    <string name="Ingrese_email">Ingrese email</string>
    <string name="Ingrese_contraseña">Ingrese contraseña</string>
    <string name="Ingrese_contraseña_anterior">Ingrese contraseña anterior</string>
    <string name="Ingrese_contraseña_nueva">Ingrese contraseña nueva</string>
    <string name="Repita_contraseña_nueva">Repita contraseña nueva</string>
    <string name="Tngresar_boton">Ingresar</string>
    <string name="registrar_boton">Registrar usuario</string>
    <string name="cambiar_contraseña">Cambiar Contraseña</string>
    <string name="campo_vacio">Debe llenar este campo.</string>

    <string name="email_vacio">Debe ingresar email</string>
    <string name="invalid_username">Email no valido</string>
    <string name="invalid_password_repeticion">Las contraseñas no coinciden.</string>
    <string name="invalid_email">Email no válido</string>
    <string name="invalid_password">Password is too short</string>
    <string name="error_incorrect_password">"contraseña incorrecta"</string>
    <string name="careers">Careers</string>
    <string-array name="countries">
        <item>Country</item>
        <item>Costa Rica</item>
        <item>USA</item>
        <item>Germany</item>
        <item>England</item>
    </string-array>
    <string-array name="positions">
        <item>Select a position</item>
        <item>Project Manager</item>
        <item>Software Architect</item>
        <item>Senior Developer</item>
        <item>Junior Developer</item>
    </string-array>
    <string name="title_activity_nav_drawer">Job Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Job Application</string>
    <string name="nav_header_subtitle">Join Us</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_job_app_list">JobAppList</string>
    <!-- Strings used for fragments for navigation -->
    <!-- String related to shared preferences -->
    <string name="preference_user_key">com.example.prac_admin_pos.USER</string>
    <string name="preference_user_key_default">none</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="delete">DELETE</string>
    <string name="edit">VIEW</string>
    <string name="appList">Job App List</string>
    <string name="action_search">Buscar</string>
</resources>
