<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CambiarPassword">

    <LinearLayout
        android:layout_width="277dp"
        android:layout_height="359dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Ingrese_contraseña_anterior"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <EditText
            android:id="@+id/nuevoPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Ingrese_contraseña_nueva"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <EditText
            android:id="@+id/repeticionPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Repita_contraseña_nueva"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="38dp" />

        <LinearLayout
            android:layout_width="277dp"
            android:layout_height="126dp"
            android:gravity="top"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_cambiar"
                android:layout_width="wrap_content"
                android:onClick="realizarCambio"
                android:layout_height="wrap_content"
                android:text="@string/cambiar_contraseña" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="115dp"
        android:layout_height="87dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>